fixed layout issues on iPad

--- a/public/stylesheets/overrides.css
+++ b/public/stylesheets/overrides.css
@@ -13,6 +13,10 @@
 }
 
 .word-container {
+  height: 275px;
+}
+/*
+.word-container {
   width: 85%;
   height: 275px;
   margin-left: auto;
@@ -20,13 +24,22 @@
   text-align: center;
   position: relative;
 }
+*/
 
+/*
 .vertical-center {
   position: absolute;
   top: 50%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+*/
+
+.vertical-align {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
 }
 
 body {
